--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,12 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host1
     networks:
       net1:
         ipv4_address: 10.10.1.2
+    ports:
+      - "8080:8080"
 
   host2:
     image: dockernet
@@ -16,6 +19,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host2
     networks:
       net2:
         ipv4_address: 10.10.2.2
@@ -26,6 +30,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host3
     networks:
       net3:
         ipv4_address: 10.10.3.2
@@ -36,6 +41,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host4
     networks:
       net4:
         ipv4_address: 10.10.4.2
@@ -46,6 +52,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host5
     networks:
       net5:
         ipv4_address: 10.10.5.2
@@ -56,6 +63,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host6
     networks:
       net6:
         ipv4_address: 10.10.6.2
@@ -66,6 +74,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host7
     networks:
       net7:
         ipv4_address: 10.10.7.2
@@ -76,6 +85,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host8
     networks:
       net8:
         ipv4_address: 10.10.8.2
@@ -86,6 +96,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host9
     networks:
       net9:
         ipv4_address: 10.10.9.2
@@ -96,6 +107,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=host
+      - HOSTNAME=host10
     networks:
       net10:
         ipv4_address: 10.10.10.2
@@ -107,6 +119,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router1
     networks:
       net1:
         ipv4_address: 10.10.1.3
@@ -123,6 +136,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router2
     networks:
       net2:
         ipv4_address: 10.10.2.3
@@ -139,6 +153,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router3
     networks:
       net3:
         ipv4_address: 10.10.3.3
@@ -155,6 +170,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router4
     networks:
       net4:
         ipv4_address: 10.10.4.3
@@ -171,6 +187,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router5
     networks:
       net5:
         ipv4_address: 10.10.5.3
@@ -187,6 +204,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router6
     networks:
       net6:
         ipv4_address: 10.10.6.3
@@ -203,6 +221,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router7
     networks:
       net7:
         ipv4_address: 10.10.7.3
@@ -219,6 +238,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router8
     networks:
       net8:
         ipv4_address: 10.10.8.3
@@ -235,6 +255,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router9
     networks:
       net9:
         ipv4_address: 10.10.9.3
@@ -251,6 +272,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router10
     networks:
       net10:
         ipv4_address: 10.10.10.3
@@ -267,6 +289,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router11
     networks:
       net21:
         ipv4_address: 10.10.21.2
@@ -281,6 +304,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router12
     networks:
       net22:
         ipv4_address: 10.10.22.2
@@ -295,6 +319,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router13
     networks:
       net23:
         ipv4_address: 10.10.23.2
@@ -309,6 +334,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router14
     networks:
       net24:
         ipv4_address: 10.10.24.2
@@ -323,6 +349,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router15
     networks:
       net25:
         ipv4_address: 10.10.25.2
@@ -337,6 +364,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router16
     networks:
       net26:
         ipv4_address: 10.10.26.2
@@ -351,6 +379,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router17
     networks:
       net27:
         ipv4_address: 10.10.27.2
@@ -365,6 +394,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router18
     networks:
       net28:
         ipv4_address: 10.10.28.2
@@ -379,6 +409,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router19
     networks:
       net29:
         ipv4_address: 10.10.29.2
@@ -393,6 +424,7 @@ services:
       - ./data:/app/data
     environment:
       - DEVICE=router
+      - HOSTNAME=router20
     networks:
       net30:
         ipv4_address: 10.10.30.2
